k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Firstapp-exp-deployment
  labels:
    app: Firstapp-exp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: Firstapp-exp
  template:
    metadata:
      labels:
        app: Firstapp-exp
    spec:
      containers:
      - name: ent-exp-container
        image: 139172076182.dkr.ecr.us-east-1.amazonaws.com/firstapp-exp-repo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
