k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firstapp-exp-service
spec:
  type: LoadBalancer
  selector:
    app: firstapp-exp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
